# pandas-gpt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: colab.yml
notebooks/: pandas_gpt_demo.ipynb
pandas_gpt/: __init__.py  completers.py
pandas_gpt/completers/: __init__.py  litellm.py  openai.py  openrouter.py
src/pandas_gpt/: __init__.py
src/pandas_gpt/completers/: __init__.py  azureopenai.py  litellm.py  openai.py
